--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="portfolio-Resume.html">Resume</a></li>
                         <li><a href="https://github.com/lshearer20" target="_blank">GitHub</a></li>
                         <li><a href="https://www.linkedin.com/in/luke-shearer/" target="_blank">LinkedIn</a></li>
-                        <a class="cta" href="mailto:luke.t.shearer@gmail.com"><button>Contact</button></a>
+                        <li><a class="cta" href="mailto:luke.t.shearer@gmail.com">Contact</a></li>
                      </ul>
                 </div>
 
