--- a/portfolio-Eventure.html
+++ b/portfolio-Eventure.html
@@ -46,7 +46,7 @@
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This project was to design a phone application of our choice. The project was done with 3 other students in my Human Computer Interactions class. The project did not consist of any coding and was simply to use design principles to create a user friendly application of our choice. We created an event finding and creating application using AdobeXD.
+                <p>This project was to design a phone application of our choice. The project was done with three other students in my Human Computer Interactions course. The project did not consist of any coding and was simply to use design principles to create a user friendly application of our choice. We created an event finding and creating application using AdobeXD.
                 </p>
                     <h3>My Role:</h3>
                     <p>
@@ -65,7 +65,7 @@
                         <li>Manage favorited / created events</li>
                         <li>Send notifications</li>
                     </p>
-
+                <h3>Project Demonstation:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Eventure" target="_blank">https://github.com/lshearer20/Eventure</a></p>
                 
 
