--- a/portfolio-Rain_Predictor.html
+++ b/portfolio-Rain_Predictor.html
@@ -46,7 +46,7 @@
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This was a machine learning project done for my Introduction to Machine Learning class. I did this project with one other student. The project takes a set of weather data and runs a "Random Forest Binary Classifier" over it to then be able to predict whether or not it will rain the following day based on certain weather attributes.
+                <p>This was a machine learning project done for my machine learning course. I did this project with one other student. The project takes a set of weather data and runs a "Random Forest Binary Classifier" over it to then be able to predict whether or not it will rain the following day based on certain weather attributes.
 
                 </p>
                 <h3>My Role:</h3>
@@ -63,10 +63,11 @@
                 <p>
                     <li>Predict chance it will rain the following day</li>
                 </p>
+                <h3>Project Demonstation:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Rain-Predictor" target="_blank">https://github.com/lshearer20/Rain-Predictor</a>
             </p>
                 
-
+                
                 <iframe id="ytplayer" style="display: block; margin: auto;" type="text/html" width=864" height="480"
                 src="https://www.youtube.com/embed/nEaBG-WmC90"
                 frameborder="1"></iframe>
