--- a/portfolio-Restaurant.html
+++ b/portfolio-Restaurant.html
@@ -47,10 +47,10 @@
             <div class="portfolio-item-individual">
         
                 <h3>Summary:</h3>
-                <p>This project is a restaurant application to allow the user to navigate businesses and their information based on a selected location. I did this project with 2 other students in my Introduction to Databases class.</p>
+                <p>This project is a restaurant application to allow the user to navigate businesses and their information based on a selected location. I did this project with two other students in my databases class.</p>
 
                 <h3>My Role:</h3>
-                <p>My role in this project was to initially create the ER(Entity Relationship) diagram for the data we were using and then create the tables, attributes and relationships based on that diagram. I also created those tables for our PostgreSQL database to allow for the data to be inserted. I also worked on the Triggers and Updates for the database when event occurred in the UI. I created the checkin window with functioning checking button as well as helped with other various UI tasks and SQL calls within the application.</p>
+                <p>My role in this project was to initially create the ER (Entity Relationship) diagram for the data we were using and then create the tables, attributes and relationships based on that diagram. I also created those tables for our PostgreSQL database to allow for the data to be inserted. I also worked on the Triggers and Updates for the database when event occurred in the UI. I created the checkin window with functioning checking button as well as helped with other various UI tasks and SQL calls within the application.</p>
 
                 <h3>Technologies Used:</h3>
                 <p>
@@ -62,12 +62,13 @@
 
                 <h3>Notable Features:</h3>
                 <p>
-                <li>Find User</li>
-                <li>Find Business based on location</li>
-                <li>Sort business's based on catagories</li>
+                <li>Find user</li>
+                <li>Find business based on location</li>
+                <li>Sort business' based on catagories</li>
                 <li>See business reviews with the ability to like reviews or leave new reviews</li>
                 <li>View number of checkins per month for a selected bussiness and add a checkin to that business</li>
                     </p>
+                <h3>Project Demonstation:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Restaurant_Application" target="_blank">https://github.com/lshearer20/Restaurant_Application</a></li>
                 
 
