--- a/portfolio-RoR_Messenger.html
+++ b/portfolio-RoR_Messenger.html
@@ -64,6 +64,7 @@
                         <li>View past messags</li>
                         <li>Enter new messages</li>
                     </p>
+                    <h3>Project Demonstation:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Messenger-Application---RoR" target="_blank">https://github.com/lshearer20/Messenger-Application---RoR</a></p>
                 
 
