--- a/portfolio-Spreadsheet.html
+++ b/portfolio-Spreadsheet.html
@@ -46,7 +46,7 @@
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This project is a spreadsheet application allowing for simple arithmetic with correct precedence and cell referencing. This was a solo project for my Object-Oriented Software Principles class. The project supports save, load, cell referencing, and simple arithmetic calculations with correct precedence.
+                <p>This project is a spreadsheet application allowing for simple arithmetic with correct precedence and cell referencing. This was a solo project for my object-oriented software principles course. The project supports save, load, cell referencing, and simple arithmetic calculations with correct precedence.
                 </p>
                 <h3>My Role:</h3>
                 <p>
@@ -67,6 +67,7 @@
                     <li>Cell color change</li>
                     <li>Demo button to automatically fill up cells</li>
                 </p>
+                <h3>Project Demonstation:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Spreadsheet_Application" target="_blank">https://github.com/lshearer20/Spreadsheet_Application</a>
                 </p>
 
