--- a/portfolio-TeamRocketGame.html
+++ b/portfolio-TeamRocketGame.html
@@ -46,7 +46,7 @@
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This project was done in C# using a framework called Monogame. It is a shooter game that I did with 3 other students for my Software Design and Architecture class. It did not get fully completed but I am proud of the work put into the project and what we did get done.
+                <p>This project was done in C# using a framework called Monogame. It is a shooter game that I did with three other students for my software design and architecture course. It did not get fully completed but I am proud of the work put into the project and what we did get done.
                 </p>
                 <h3>My Role:</h3>
                 <p>
@@ -60,11 +60,12 @@
                 </p>
                 <h3>Notable Features:</h3>
                 <p>
-                    <li>Difficulty Settings</li>
-                    <li>Pause / Resume</li>
+                    <li>Difficulty settings</li>
+                    <li>Pause / resume</li>
                     <li>Player invincibility and slow motion movement</li>
-                    <li>Enemy Waves / Bosses</li>
+                    <li>Enemy waves / bosses</li>
                 </p>
+                <h3>Project Demonstation:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/TeamRocketGame" target="_blank">https://github.com/lshearer20/TeamRocketGame</a>
                 </p>
                 
