--- a/portfolio-FriendlyFoodFinder.html
+++ b/portfolio-FriendlyFoodFinder.html
@@ -66,9 +66,9 @@
                     <h3>Notable Features:</h3>
                     <p>
                         <li>Scan food item barcodes and report to user if selected allergins / ingredients are in the food</li>
-                        <li>Android Phone Application</li>
+                        <li>Android phone application</li>
                     </p>
-
+                <h3>Project Demonstation:</h3>
                 <p>Github API: <a href="https://github.com/lshearer20/FriendlyFoodFinder" target="_blank">https://github.com/lshearer20/FriendlyFoodFinder</a></p>
                 <p><img src="img/FriendlyFoodFinder_SS.png" alt="port1" class="intro__img"></p>
 
