--- a/portfolio-Restaurant.html
+++ b/portfolio-Restaurant.html
@@ -68,7 +68,7 @@
                 <li>See business reviews with the ability to like reviews or leave new reviews</li>
                 <li>View number of checkins per month for a selected bussiness and add a checkin to that business</li>
                     </p>
-                <h3>Project Demonstation:</h3>
+                <h3>Project Demonstration:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Restaurant_Application" target="_blank">https://github.com/lshearer20/Restaurant_Application</a></li>
                 
 
