--- a/portfolio-Eventure.html
+++ b/portfolio-Eventure.html
@@ -65,7 +65,7 @@
                         <li>Manage favorited / created events</li>
                         <li>Send notifications</li>
                     </p>
-                <h3>Project Demonstation:</h3>
+                <h3>Project Demonstration:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Eventure" target="_blank">https://github.com/lshearer20/Eventure</a></p>
                 
 
