--- a/portfolio-Rain_Predictor.html
+++ b/portfolio-Rain_Predictor.html
@@ -63,7 +63,7 @@
                 <p>
                     <li>Predict chance it will rain the following day</li>
                 </p>
-                <h3>Project Demonstation:</h3>
+                <h3>Project Demonstration:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Rain-Predictor" target="_blank">https://github.com/lshearer20/Rain-Predictor</a>
             </p>
                 
