--- a/portfolio-Spreadsheet.html
+++ b/portfolio-Spreadsheet.html
@@ -67,7 +67,7 @@
                     <li>Cell color change</li>
                     <li>Demo button to automatically fill up cells</li>
                 </p>
-                <h3>Project Demonstation:</h3>
+                <h3>Project Demonstration:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/Spreadsheet_Application" target="_blank">https://github.com/lshearer20/Spreadsheet_Application</a>
                 </p>
 
