--- a/portfolio-TeamRocketGame.html
+++ b/portfolio-TeamRocketGame.html
@@ -65,7 +65,7 @@
                     <li>Player invincibility and slow motion movement</li>
                     <li>Enemy waves / bosses</li>
                 </p>
-                <h3>Project Demonstation:</h3>
+                <h3>Project Demonstration:</h3>
                 <p>Github: <a href="https://github.com/lshearer20/TeamRocketGame" target="_blank">https://github.com/lshearer20/TeamRocketGame</a>
                 </p>
                 
