--- a/portfolio-Restaurant.html
+++ b/portfolio-Restaurant.html
@@ -47,7 +47,7 @@
             <div class="portfolio-item-individual">
         
                 <h3>Summary:</h3>
-                <p>This project is a restaurant application to allow the user to navigate businesses and their information based on a selected location. I did this project with two other students in my databases class.</p>
+                <p>This project is a restaurant application to allow the user to navigate businesses and their information based on a selected location. I did this project with two other students in my databases course.</p>
 
                 <h3>My Role:</h3>
                 <p>My role in this project was to initially create the ER (Entity Relationship) diagram for the data we were using and then create the tables, attributes and relationships based on that diagram. I also created those tables for our PostgreSQL database to allow for the data to be inserted. I also worked on the Triggers and Updates for the database when event occurred in the UI. I created the checkin window with functioning checking button as well as helped with other various UI tasks and SQL calls within the application.</p>
