--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <div class="about-me__body">
                     <p>I recently graduated with a B.S. in Software Engineering from WSU. I am eager to find a job as a software developer in a company that cultivates learning and growth.</p>
-                    <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to quench my thirst for creation, skill improvement and acquisition.</p>
+                    <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to quench my thirst for creation, skill improvement, and acquisition.</p>
                 </div>
 
                 <img src="img/lucas.jpg" alt="Luke leaning leaning against a wall" class="about-me__img">
