Team rocket project summary change

--- a/portfolio-TeamRocketGame.html
+++ b/portfolio-TeamRocketGame.html
@@ -46,7 +46,7 @@
 
             <div class="portfolio-item-individual">
                 <h3>Summary:</h3>
-                <p>This project was done in C# using a framework called Monogame. It is a shooter game that I did with three other students for my software design and architecture course. It did not get fully completed but I am proud of the work put into the project and what we did get done.
+                <p>This project was done in C# using a framework called Monogame. It is a shooter game that I did with three other students for my software design and architecture course. This was a large project with emphasis based on good coding practices and design principles. 
                 </p>
                 <h3>My Role:</h3>
                 <p>
