--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
                 <div class="services">
                     <div class="service">
                         <h3>Languages</h3>
-                        <p><li>C# (Experienced)</li>
-                            <li>C/C++ (Experienced)</li>
-                            <li>SQL (Intermediate)</li>
-                            <li>Python (Intermediate)</li>
-                            <li>Java (Beginner)</li>
-                            <li>HTML/CSS (Beginner)</li></p>
+                        <p>
+                            <li>Java</li>
+                            <li>C#</li>
+                            <li>C/C++</li>
+                            <li>SQL</li>
+                            <li>Python</li>
+                            <li>HTML/CSS</li>
+                            <li>JavaScript / TypeScript</li>
+                        </p>
                     </div> <!-- /service-->
 
                     <div class="service">
