--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
                 <h2 class="section__title section__title--services">What I do</h2>
                 <div class="services">
                     <div class="service">
-                        <h3>Languages</h3>
+                        <h3>Languages / Frameworks</h3>
                         <p>
                             <li>Java</li>
                             <li>C#</li>
                             <li>C/C++</li>
                             <li>SQL</li>
+                            <li>Angular</li>
+                            <li>Spring / Spring Boot</li>
                             <li>Python</li>
+                            <li>Bootstrap</li>
                             <li>HTML/CSS</li>
                             <li>JavaScript / TypeScript</li>
                         </p>
