--- a/portfolio-RoR_Messenger.html
+++ b/portfolio-RoR_Messenger.html
@@ -61,7 +61,7 @@
                     </p>
                     <h3>Notable Features:</h3>
                     <p>
-                        <li>View past messags</li>
+                        <li>View past messages</li>
                         <li>Enter new messages</li>
                     </p>
                     <h3>Project Demonstration:</h3>
