update second photo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to quench my thirst for creation, skill improvement, and acquisition.</p>
                 </div>
 
-                <img src="img/lucas.jpg" alt="Luke leaning leaning against a wall" class="about-me__img">
+                <img src="img/lucas_standing.png" alt="Luke standing on some hay" class="about-me__img">
             </section>
 
             <!-- My Work-->
