--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
                 <p class="section__subtitle section__subtitle--about">Washington State University Graduate</p>
 
                 <div class="about-me__body">
-                    <p>I recently graduated with a B.S. in Software Engineering from WSU. I am eager to find a job as a software developer in a company that cultivates learning and growth.</p>
-                    <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to quench my thirst for creation, skill improvement, and acquisition.</p>
+                    <p>I graduated spring 2020 from Washington State University with a BS in Software Engineering. I am eager to find a job as a software developer in a company that will challenge me to learn and grow daily.</p>
+                    <p>Previous to WSU, I graduated with a B.S in Kinesiology from Western Washington University but decided to change career paths to fill my desire for product creation, skill improvement, and skill acquisition.</p>
+                    <p>If your company is looking for a software engineer that is ready to dive deep into your company projects and aspiratoins who is ready to start at the bottom and work his way up, look no further.</p>
+                    <p>I would love the opportunity to hear more about your company so please feel free to <a style="color: #dd7f2a; text-decoration:none" href="mailto:luke.t.shearer@gmail.com">contact</a> me.</p>
                 </div>
 
                 <img src="img/lucas_standing.png" alt="Luke standing on some hay" class="about-me__img">
